--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "new-shopping-cart",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
