--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
+    "@material-ui/core": "^4.4.3",
+    "antd": "^3.23.5",
+    "bootstrap": "^4.3.1",
     "firebase": "^7.0.0",
     "react": "^16.10.1",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.10.1",
     "react-scripts": "3.1.2"
   },
