--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^3.23.5",
     "bootstrap": "^4.3.1",
     "firebase": "^7.0.0",
+    "node-sass": "^4.13.0",
     "rbx": "^2.2.0",
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.12",
